# documentation-generator

./: .env.example  README.md  pyproject.toml
.openclaude/: settings.local.json
src/docgen/: __init__.py  analyzer.py  bookstack.py  cli.py  scanner.py
tests/: test_analyzer.py  test_bookstack.py  test_cli.py  test_scanner.py
