[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docgen"
version = "0.1.0"
description = "AI agent that generates technical documentation in BookStack"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pathspec>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "responses>=0.25",
]

[project.scripts]
docgen = "docgen.cli:main"
